<resources>
    <string name="app_name">ISM Author</string>
    <string name="hello_world">Hello world!</string>
    <string name="strtest"></string>
    <string name="action_settings">Settings</string>
    <string name="str_personal_info">PERSONAL INFORMATION</string>
    <string name="str_manage_credential">MANAGE CREDENTIAL</string>
    <string name="strenteremailorusername">Enter Email/ Username</string>
    <string name="strenterpassword">Enter Password</string>
    <string name="strrememberme">Remember Me</string>
    <string name="strlogin">LOGIN</string>
    <string name="strforgotpwd"><u>Forgot Password</u></string>
    <string name="strdonothavecredentials">Do Not Have Credentials, </string>
    <string name="strclickhereu"><u>Click Here</u></string>
    <string name="title_activity_author_profile_information">AuthorProfileInformationActivity</string>
    <string name="title_forgot_password">Password will be sent to your email id.</string>
    <string name="strprofileinformation">PROFILE INFORMATION</string>
    <string name="stremailaddress">Email Address</string>
    <string name="strgender">Gender</string>
    <string name="strfullname">Full Name</string>
    <string name="strhomeaddress">Home Address</string>
    <string name="strstate">State</string>
    <string name="strcity">City</string>
    <string name="strcountry">Country</string>
    <string name="strdateofbirth">Date of Birth</string>
    <string name="strcontactnumber">Contact Number</string>
    <string name="strage">Age</string>
    <string name="strBooksYouMayWantToRead">Books you may want to read</string>
    <string name="strYourFavouriteBooks">Your Favourite Books</string>
    <string name="struploadprofilepicture">UPLOAD PROFILE PICTURE</string>
    <string name="strschoolinformation">SCHOOL INFORMATION</string>
    <string name="stryouareregisteredforfollowingschool">You are registered for following school.</string>
    <string name="strifitisnotyourschool">If it\'s not your school.</string>
    <string name="strnameofschool">Name of School</string>
    <string name="strclass">Class</string>
    <string name="strclassroom">Class Room</string>
    <string name="stracademicyear">Academic Year</string>
    <string name="strdistrictofschool">District of School</string>
    <string name="strprogramcourse">Program/ Course</string>
    <string name="strclickhere">Click Here</string>
    <string name="strmanageaccount">MANAGE ACCOUNT</string>
    <string name="strusername">Username</string>
    <string name="strcurrentpwd">Current Password</string>
    <string name="strnewpwd">New Password</string>
    <string name="strconfirmpwd">Confirm Password</string>
    <string name="strsubmit">Submit</string>
    <string name="strcancel">Cancel</string>
    <string name="strquestiontitle">Question Title</string>
    <string name="stradvance">Advance</string>
    <string name="strquestiontype">Question Type</string>
    <string name="strmultiplechoice">Multiple Choice</string>
    <string name="strevaluationnotes">Evaluation Notes</string>
    <string name="strsolution">Solution</string>
    <string name="straddquestiontopreview">Add Question to preview</string>
    <string name="strsaveandaddmore">Save &amp; Add More</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="strassignmentdatecolon">Assignment Date:</string>
    <string name="strassignmentdate">Assignment date</string>
    <string name="strassessed">Assessed</string>
    <string name="stranswered">Answered</string>
    <string name="strnotanswered">Not Answered</string>
    <string name="strskipped">Skipped</string>
    <string name="strunasssessed">Unassessed</string>
    <string name="strfinished">Finished</string>
    <string name="strassignmenttype">Assignment Type :</string>
    <string name="stravgscore">Avrage Score</string>
    <string name="strquestionscore">Question Score</string>
    <string name="strpercent">%</string>
    <string name="strrollno">Roll No :</string>
    <string name="title_activity_author_host">AuthorHostActivity</string>
    <string name="straddpost">ADD POST</string>
    <string name="stradd">ADD</string>
    <string name="straddnew">ADD NEW</string>
    <string name="strpost">Post</string>
    <string name="strcomment">Comment</string>
    <string name="strsubmission_date">Submission Date</string>
    <string name="strstatus">Status</string>
    <string name="gotrending">Go Trending</string>
    <string name="setquiz">Set Quiz</string>
    <string name="settrial">Set Trial</string>
    <string name="progressreport">Progress Report</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strviewprofile">View Profile</string>
    <string name="strmyfeeds">My Feeds</string>
    <string name="strmybooks">My books</string>
    <string name="strfollowers">Followers</string>
    <string name="strmyactivity">My activity</string>
    <string name="emaamall">Emma Mall</string>
    <string name="strsentence">Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?</string>
    <string name="strviewall">View All</string>
    <string name="sayit">SAY IT</string>
    <string name="strcomments">All Comments</string>
    <string name="strclose">Close</string>
    <string name="strdone">Done</string>
    <string name="strsearchstudymates">Search Users</string>
    <string name="strtag">TAG</string>
    <string name="strmydesk">My Desk</string>
    <string name="strgotrending">Go Trending</string>
    <string name="strmy30th">My 30th</string>
    <string name="strassessment">Assessment</string>
    <string name="strmydeskinfo">Explore author\'s desk to reach his resources</string>
    <string name="strgotrendinginfo">In rich your Knowlege with trending question</string>
    <string name="strtrialinfo">Attempt trial and check your Knowlege</string>
    <string name="strmy30thinfo">My 30th will help you access your Progress</string>
    <string name="strassessmentinfo">Check Your score and reports of progress</string>
    <string name="stractivity">Activity</string>
    <string name="strexam">Exam</string>
    <string name="strassignmentinfo">Assignment Information</string>
    <string name="strassignmentname">Assignment Name</string>
    <string name="strcoursename">Course Name</string>
    <string name="strsave">Save</string>
    <string name="strsubject">Subject</string>
    <string name="strtopic">Topic</string>
    <string name="strsubmissiondate">Submission Date:</string>
    <string name="strpersonalinformation">Exam Information</string>
    <string name="strexamname">Exam Name</string>
    <string name="strsubjectname">Subject Name</string>
    <string name="strpassingpercent">Passing Percent</string>
    <string name="strexamassessor">Exam Assessor</string>
    <string name="strnoassessor">No Assessor</string>
    <string name="strexamfor">Exam For:</string>
    <string name="strexamtype">Exam Type</string>
    <string name="strstudent">Student</string>
    <string name="strexamtype_colon">Exam Type :</string>
    <string name="strClass_colon">Class :</string>
    <string name="processing">Processing</string>
    <string name="strassignmentno">Assignment No</string>
    <string name="strexammode">Exam Mode</string>
    <string name="strexamduration">Exam Duration(MIN)</string>
    <string name="strattemptcount">Attempt Count</string>
    <string name="strexamschedule">Exam Schedule</string>
    <string name="strstartdate">Start Date</string>
    <string name="strenddate">End Date</string>
    <string name="strstarttime">Strat Time</string>
    <string name="strnotifystudent">Notify Student Via SMS</string>
    <string name="strexaminstruction">Exam Instruction</string>
    <string name="strdeclareresults">Declare Results :</string>
    <string name="strnegativemarkingcolon">Negative Marking :</string>
    <string name="strnegativemarking">Negative Marking</string>
    <string name="strrandomquestion">Random Question :</string>
    <string name="strusescore">Use Score From Questions :</string>
    <string name="strscorevalue">Question Score Value :</string>
    <string name="strnegativemark">Question Negative Mark :</string>
    <string name="streditexam">Edit</string>
    <string name="strcopyexam">Copy</string>
    <string name="strscheduleexam">Schedule</string>
    <string name="stryes">Yes</string>
    <string name="strno">No</string>
    <string name="strsetquestion">set question</string>
    <string name="strcourse">Course</string>
    <string name="strquestionbank">Question Bank</string>
    <string name="strquestion">Question</string>
    <string name="strcategorycolon">Category:</string>
    <string name="strcategory">Category</string>
    <string name="strcreatedby">Created by:</string>
    <string name="straddnewquestion">Add New Question</string>
    <string name="straddtopreview">Add to Preview</string>
    <string name="strpreview">Preview</string>
    <string name="strhinttheiranswer">Their Answer</string>
    <string name="strbiology">Biology</string>
    <string name="strfreeze">Freeze</string>
    <string name="strchooseimagefromgallery">Choose Image from gallery</string>
    <string name="strchoosevideofromgallery">Choose Video from gallery</string>
    <string name="strcaptureimageusingcamera">Capture Image using camera</string>
    <string name="strcapturevideousingcamera">Capture Video using camera</string>
    <string name="strrecordyouraudio">Record Your Audio</string>
    <string name="strchooseyouraudio">Choose Your Audio</string>
    <string name="strwriteyourcommenthere">Write Your Comment Here</string>
    <string name="hint_search">Search</string>
    <string name="username">Enter Username</string>
    <string name="select">Select</string>
    <string name="strall">All</string>
    <string name="msg_offline">You are offline!\nPlease check your internet connection.</string>
    <string name="connectivity_problem">Connectivity problem!</string>
    <string name="ok">Ok</string>
    <string name="strTrial">Trial</string>
    <string name="lesson_notes">Lesson Notes</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="ism_mock">ISM Mock</string>
    <string name="wassce">Wassce</string>
    <string name="end_of_term">End of Term</string>
    <string name="jotter">Jotter</string>
    <string name="favorite">Favorite</string>
    <string name="timetable">Timetable</string>
    <string name="books">Books</string>
    <string name="forum">Forum</string>
    <string name="progress_report">Progress Report</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_new_favorite">Add new Favorite</string>
    <string name="strbookname">Book Name</string>
    <string name="strbook">Book :</string>
    <string name="strquestionpallete">Question Palette</string>
    <string name="strlegend">Legend :</string>
    <string name="strAboutMe">About Me</string>
    <string name="strBooks">Books</string>
    <string name="strAssignments">Assignments</string>
</resources>