<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_question_palette_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_blue"
            android:padding="@dimen/d5dp"
            android:text="@string/strquestionpallete"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/d15dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_questionpalette_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/tv_legend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10dp"
            android:padding="@dimen/d10dp"
            android:text="@string/strlegend"
            android:textAllCaps="true"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/d15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ques_palette_answered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fragment_background_color"
            android:drawableLeft="@drawable/question_palette_answered"
            android:drawablePadding="@dimen/d15dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/d5dp"
            android:paddingLeft="@dimen/d15dp"
            android:paddingTop="@dimen/d5dp"
            android:text="@string/stranswered"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/d15dp" />

        <TextView
            android:id="@+id/tv_ques_palette_not_answered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10dp"
            android:background="@color/fragment_background_color"
            android:drawableLeft="@drawable/question_palette_not_answered"
            android:drawablePadding="@dimen/d15dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/d5dp"
            android:paddingLeft="@dimen/d15dp"
            android:paddingTop="@dimen/d5dp"
            android:text="@string/strnotanswered"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/d15dp" />

        <TextView
            android:id="@+id/tv_ques_palette_skipped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d10dp"
            android:background="@color/fragment_background_color"
            android:drawableLeft="@drawable/question_pallete_skipped"
            android:drawablePadding="@dimen/d15dp"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/d5dp"
            android:paddingLeft="@dimen/d15dp"
            android:paddingTop="@dimen/d5dp"
            android:text="@string/strskipped"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/d15dp" />

    </LinearLayout>


</LinearLayout>
