<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/desk_tab_bg"
    android:orientation="vertical"
    tools:mContext="com.ism">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d60dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/shadow_separator"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_about_me"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_tab_my_desk"
            android:gravity="center"
            android:padding="@dimen/d5dp"
            android:text="@string/strAboutMe"
            android:textColor="@drawable/text_my_desk_tab"
            android:textSize="@dimen/d20sp" />

        <TextView
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/txt_about_me"
            android:background="#D9D9D9"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_assignments"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/line1"
            android:background="@drawable/bg_tab_my_desk"
            android:gravity="center"
            android:text="@string/strAssignments"
            android:textColor="@drawable/text_my_desk_tab"
            android:textSize="@dimen/d20sp" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/txt_assignments"
            android:background="#D9D9D9"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_books"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/line2"
            android:background="@drawable/bg_tab_my_desk"
            android:gravity="center"
            android:text="@string/strBooks"
            android:textColor="@drawable/text_my_desk_tab"
            android:textSize="@dimen/d20sp" />

        <TextView
            android:layout_width="@dimen/d140dp"
            android:layout_height="wrap_content"
            android:text="@string/stradd"
            android:gravity="center"
            android:id="@+id/txt_add"
            android:layout_marginRight="@dimen/d10dp"
            android:layout_centerVertical="true"
            android:padding="@dimen/d5dp"
            android:visibility="gone"
            android:textSize="@dimen/d20sp"
            android:textColor="@color/color_white"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bg_red_add_assignments"
            android:textAllCaps="true" />

    </RelativeLayout>

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/d5dp"-->
    <!--android:background="@drawable/shadow_separator" />-->

    <FrameLayout
        android:id="@+id/fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"></FrameLayout>
</LinearLayout>