<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/grey_indicator" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/d15dp"
            android:layout_toRightOf="@+id/img_indicator"
            android:background="@drawable/bg_exam_options"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_schedule_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d15dp"
                android:text="@string/strscheduleexam"
                android:textColor="@color/color_white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d1dp"
                android:background="@color/exam_options_dialog_sep" />

            <TextView
                android:id="@+id/tv_copy_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d15dp"
                android:text="@string/strcopyexam"
                android:textColor="@color/color_white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/d1dp"
                android:background="@color/exam_options_dialog_sep" />

            <TextView
                android:id="@+id/tv_edit_exam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/d15dp"
                android:text="@string/streditexam"
                android:textColor="@color/color_white" />
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>
